修改助教第二次建議

--- a/index.html
+++ b/index.html
@@ -146,6 +146,8 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="container">
         <ul class="row no-gutters mb-6 list-unstyled">
             <li class="col-4" data-aos="fade-up" data-aos-delay="500">
                 <div class="card border-0">
@@ -153,7 +155,8 @@
                     <div class="card-body">
                         <h4 class="card-title mb-3">All who cycle are my friends</h4>
                         <p class="card-text text-muted mb-3">2020.4.27</p>
-                        <p class="card-text text-muted mb-3">A rider from Stockholm interviewed for an article about the phenomenon notes that riding a
+                        <p class="card-text text-muted mb-3">A rider from Stockholm interviewed for an article about the
+                            phenomenon notes that riding a
                             bike imparts a feeling of
                             freedom to the rider…</p>
                     </div>
@@ -165,8 +168,9 @@
                     <div class="card-body">
                         <h4 class="card-title mb-3">Swedish riders and enthusiasts</h4>
                         <p class="card-text text-muted mb-3">2020.3.11</p>
-                        <p class="card-text text-muted mb-3">There are also several bicycle clubs throughout Sweden with a fixed-gear niche. Komet Club Rouler is a club based in
-                        Gothenburg, annually arranging Svart Kat…</p>
+                        <p class="card-text text-muted mb-3">There are also several bicycle clubs throughout Sweden with a
+                            fixed-gear niche. Komet Club Rouler is a club based in
+                            Gothenburg, annually arranging Svart Kat…</p>
                     </div>
                 </div>
             </li>
@@ -176,8 +180,9 @@
                     <div class="card-body">
                         <h4 class="card-title mb-3">The Australian fixie culture</h4>
                         <p class="card-text text-muted mb-3">2020.2.29</p>
-                        <p class="card-text text-muted mb-3">Online stores in Australia ship partially-assembled bikes directly to consumers, considerably undercutting prices at
-                        typical brick and mortar stores…</p>
+                        <p class="card-text text-muted mb-3">Online stores in Australia ship partially-assembled bikes directly
+                            to consumers, considerably undercutting prices at
+                            typical brick and mortar stores…</p>
                     </div>
                 </div>
             </li>
